deploy/kustomize/istio/gateway/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
  namespace: istio-gateway
spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - api.local
        - api-metallb.local
      port:
        name: http
        number: 80
        protocol: HTTP
