deploy/kustomize/istio/gateway/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-api-ingress
  namespace: istio-gateway
spec:
  ingressClassName: nginx
  rules:
    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  name: http2
